--- a/exp_0001/config.yaml
+++ b/exp_0001/config.yaml
@@ -1,4 +1,4 @@
-data_path: /content/drive/MyDrive/kaggle_PetFinder/data
+data_path : '/content/drive/MyDrive/kaggle_PetFinder/data'
 nb_num : 1
 seed : 77
 epoch : 100
@@ -10,13 +10,10 @@ train_bs : 32
 valid_bs : 32
 num_workers : 4
 device : 'cuda:0' if torch.cuda.is_available else 'cpu'
-
 model_selection : StratifiedKFold
-
 optimizer : AdamW
 lr : 1e-3
 weight_decay : 1e-4
 beta1 : 0.5
 beta2 : 0.999
-
 scheduler : OneCycleLR
