--- a/exp_0001/config.yaml
+++ b/exp_0001/config.yaml
@@ -1,19 +1,47 @@
-nb_num: 1
-data_path: /content/drive/MyDrive/kaggle_PetFinder/data
+exp_num: 1
+
 seed: 77
-epoch: 100
-fold_num: 5
-use_fold: 0
-model_arch: tf_efficientnet_b0
-img_size: 256
-train_bs: 32
-valid_bs: 32
-num_workers: 4
-device: 'cuda:0' if torch.cuda.is_available else 'cpu'
-model_selection: StratifiedKFold
-optimizer: AdamW
-lr: 1e-3
-weight_decay: 1e-4
-beta1: 0.5
-beta2: 0.999
-scheduler: OneCycleLR
+epochs: 1000
+nz: 100
+
+data:
+  path: /content/drive/MyDrive/Art/GAN/flower_gan/data/images/
+  info_path: /content/drive/MyDrive/Art/GAN/flower_gan/data/data_info.pkl
+  img_size: 128
+  batch_size: 256
+  num_workers: 2
+
+aug:
+  RandomResizedCrop:
+    height: ${data.img_size}
+    width: ${data.img_size}
+    scale: [0.875, 1.0]
+    p: 1.0
+  HorizontalFlip: 
+    p: 0.5
+  Normalize:
+    mean: [0.485, 0.456, 0.406]
+    std: [0.229, 0.224, 0.225]
+    max_pixel_value: 255.0
+    p: 1.0
+
+trn:
+  param_clip: 0.01
+  g_step: 5
+  d_step: 1
+
+criterion:
+  name: wasserstein # lsgan
+
+optim:
+  name: Adam # RMSprop
+  lr: 5e-4
+  beta1: 0.5
+  beta2: 0.999
+
+save:
+  gif_interval: 5
+
+wandb:
+  project: flower_gan
+  tags: [test]
