--- a/exp_0001/config.yaml
+++ b/exp_0001/config.yaml
@@ -1,16 +1,18 @@
 nb_num: 1
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 seed: 77
-epoch: 100
+epoch: 50
 fold_num: 5
 use_fold: 0
 model_arch: tf_efficientnet_b0
 img_size: 256
 train_bs: 32
 valid_bs: 32
-num_workers: 4
+num_workers: os.cpu_count()
 device: cuda:0
-model_selection: StratifiedKFold
+mean: [0.485, 0.456, 0.406]
+std: [0.229, 0.224, 0.225]
+model_selection: KFold
 optimizer: AdamW
 lr: 1e-3
 weight_decay: 1e-4
