--- a/exp_0001/config.yaml
+++ b/exp_0001/config.yaml
@@ -1,17 +1,80 @@
 nb_num: 1
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 seed: 77
-epoch: 50
+epoch: 10
 fold_num: 5
 use_fold: 0
 model_arch: tf_efficientnet_b0
 img_size: 256
-train_bs: 32
-valid_bs: 32
+train_bs: 16
+valid_bs: 16
 num_workers: 2
 device: cuda:0
-mean: [0.485, 0.456, 0.406]
-std: [0.229, 0.224, 0.225]
+img_mean: [0.485, 0.456, 0.406]
+img_std: [0.229, 0.224, 0.225]
+train_aug:
+  PadIfNeeded:
+    min_height: ${img_size * 3}
+    min_width: ${img_size * 3}
+    border_mode: 3
+    p: 1.0
+  Resize:
+    height: ${img_size}
+    width: ${img_size}
+  RandomResizedCrop:
+    height: ${img_size}
+    width: ${img_size}
+    scale: [0.3, 1.0]
+    p: 1.0
+  HorizontalFlip: 
+    p: 0.5
+  VerticalFlip: 
+    p: 0.5
+  Normalize:
+    mean: ${img_mean}
+    std: ${img_std}
+    max_pixel_value: 255.0
+    p: 1.0
+
+valid_aug:
+  PadIfNeeded:
+    min_height: ${img_size * 3}
+    min_width: ${img_size * 3}
+    border_mode: 3
+    p: 1.0
+  Resize:
+    height: ${img_size}
+    width: ${img_size}
+  Normalize:
+    mean: ${img_mean}
+    std: ${img_std}
+    max_pixel_value: 255.0
+    p: 1.0
+
+tta_aug:
+  PadIfNeeded:
+    min_height: ${img_size * 3}
+    min_width: ${img_size * 3}
+    border_mode: 3
+    p: 1.0
+  Resize:
+    height: ${img_size}
+    width: ${img_size}
+  RandomResizedCrop:
+    height: ${img_size}
+    width: ${img_size}
+    scale: [0.3, 1.0]
+    p: 1.0
+  HorizontalFlip: 
+    p: 0.5
+  VerticalFlip: 
+    p: 0.5
+  Normalize:
+    mean: ${img_mean}
+    std: ${img_std}
+    max_pixel_value: 255.0
+    p: 1.0
+
 model_selection: KFold
 optimizer: AdamW
 lr: 1e-3
