--- a/exp_0001/config.yaml
+++ b/exp_0001/config.yaml
@@ -14,8 +14,8 @@ img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
 train_aug:
   PadIfNeeded:
-    min_height: ${img_size * 3}
-    min_width: ${img_size * 3}
+    min_height: ${img_size}
+    min_width: ${img_size}
     border_mode: 3
     p: 1.0
   Resize:
