--- a/exp_0001/config.yaml
+++ b/exp_0001/config.yaml
@@ -1,5 +1,7 @@
 nb_num: 1
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
+wandb_project: kaggle_PF_pre
+
 seed: 77
 epoch: 10
 fold_num: 5
@@ -14,8 +16,8 @@ img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
 train_aug:
   PadIfNeeded:
-    min_height: ${img_size}
-    min_width: ${img_size}
+    min_height: ${img_size} * 3
+    min_width: ${img_size} * 3
     border_mode: 3
     p: 1.0
   Resize:
