--- a/exp_0001/config/config/aug.yaml
+++ b/exp_0001/config/config/aug.yaml
@@ -1,23 +1,14 @@
-nb_num: 1
-data_path: /content/drive/MyDrive/kaggle_PetFinder/data
-wandb_project: kaggle_PF_pre
-
-seed: 77
-epoch: 10
-fold_num: 5
-use_fold: 0
-model_arch: tf_efficientnet_b0
-img_size: 256
-train_bs: 16
-valid_bs: 16
-num_workers: 2
-device: cuda:0
+# @package _group_
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
+
+img_size: 256
+pad_img_size: 800
+
 train_aug:
   PadIfNeeded:
-    min_height: ${img_size} * 3
-    min_width: ${img_size} * 3
+    min_height: ${pad_img_size}
+    min_width: ${pad_img_size}
     border_mode: 3
     p: 1.0
   Resize:
@@ -40,8 +31,8 @@ train_aug:
 
 valid_aug:
   PadIfNeeded:
-    min_height: ${img_size}
-    min_width: ${img_size}
+    min_height: ${pad_img_size}
+    min_width: ${pad_img_size}
     border_mode: 3
     p: 1.0
   Resize:
@@ -55,8 +46,8 @@ valid_aug:
 
 tta_aug:
   PadIfNeeded:
-    min_height: ${img_size}
-    min_width: ${img_size}
+    min_height: ${pad_img_size}
+    min_width: ${pad_img_size}
     border_mode: 3
     p: 1.0
   Resize:
@@ -76,11 +67,3 @@ tta_aug:
     std: ${img_std}
     max_pixel_value: 255.0
     p: 1.0
-
-model_selection: KFold
-optimizer: AdamW
-lr: 1e-3
-weight_decay: 1e-4
-beta1: 0.5
-beta2: 0.999
-scheduler: OneCycleLR
