--- a/exp_0001/config/data/data.yaml
+++ b/exp_0001/config/data/data.yaml
@@ -5,6 +5,10 @@ img_std: [0.229, 0.224, 0.225]
 img_size: 256
 pad_img_size: 800
 
+train_bs: 16
+valid_bs: 16
+num_workers: 2
+
 train_aug:
   PadIfNeeded:
     min_height: ${pad_img_size}
