--- a/exp_0001/config/default_config.yaml
+++ b/exp_0001/config/default_config.yaml
@@ -1,11 +1,11 @@
 nb_num: 1
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
-wandb_project: kaggle_PF_pre
+wandb_project: kaggle_PF
 
 seed: 77
 
 fold_num: 5
-use_fold: 0
+use_fold: [0]
 model_arch: tf_efficientnet_b0
 device: cuda:0
 
