--- a/exp_0004/config/train/train.yaml
+++ b/exp_0004/config/train/train.yaml
@@ -3,6 +3,7 @@ epoch: 10
 model_selection: KFold
 optimizer: AdamW
 lr: 1e-4
+loss: BCEWithLogitsLoss # MSELoss
 weight_decay: 1e-4
 beta1: 0.5
 beta2: 0.999
