--- a/exp_0004/config/train/train.yaml
+++ b/exp_0004/config/train/train.yaml
@@ -3,8 +3,11 @@ epoch: 10
 model_selection: KFold
 optimizer: AdamW
 lr: 1e-4
-loss: BCEWithLogitsLoss # MSELoss
+loss: MSELoss # MSELoss, BCEWithLogitsLoss
 weight_decay: 1e-4
 beta1: 0.5
 beta2: 0.999
 scheduler: OneCycleLR
+pct_start: 0.1
+div_factor: 10
+final_div_factor: 100
