--- a/exp_0008/config/data/data.yaml
+++ b/exp_0008/config/data/data.yaml
@@ -31,6 +31,23 @@ train_aug:
     p: 0.5
   VerticalFlip: 
     p: 0.5
+  Rotate:
+    limit: 180
+    p: 0.5
+  ShiftScaleRotate:
+    shift_limit: 0.1
+    scale_limit: 0.1
+    rotate_limit: 45
+    p: 0.5
+  HueSaturationValue:
+    hue_shift_limit: 0.2
+    sat_shift_limit: 0.2
+    val_shift_limit: 0.2
+    p: 0.5
+  RandomBrightness:
+    brightness_limit: 0.1
+    contrast_limit: 0.1
+    p: 0.5
 
 
 valid_aug:
