--- a/exp_0008/config/data/data.yaml
+++ b/exp_0008/config/data/data.yaml
@@ -44,7 +44,7 @@ train_aug:
     sat_shift_limit: 0.2
     val_shift_limit: 0.2
     p: 0.5
-  RandomBrightness:
+  RandomBrightnessContrast:
     brightness_limit: 0.1
     contrast_limit: 0.1
     p: 0.5
