--- a/exp_0038/config/config.yaml
+++ b/exp_0038/config/config.yaml
@@ -41,6 +41,8 @@ num_workers: 2
 
 ##### MixUp #############################################
 mix_p: 0.0
+init_nomix_epoch: 0
+last_nomix_epoch: 0
 
 ##### Data Augmentation #################################
 padding: None
