--- a/exp/exp_0049/config/config.yaml
+++ b/exp/exp_0049/config/config.yaml
@@ -9,7 +9,7 @@ use_fold: [0, 1, 2, 3, 4]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 model_arch: swin_base_patch4_window12_384_in22k
 device: cuda:0
-save: False
+save: True
 
 ##### Group ############################################
 cluster_num: 6
