--- a/exp/exp_0051/config/config.yaml
+++ b/exp/exp_0051/config/config.yaml
@@ -5,7 +5,7 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 model_arch: tf_efficientnet_b2_ns
 device: cuda:0
