--- a/exp/exp_0067/config/config.yaml
+++ b/exp/exp_0067/config/config.yaml
@@ -5,11 +5,11 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0]
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 model_arch: tf_efficientnet_b2_ns
 device: cuda:0
-save: False
+save: True
 
 ##### Group ############################################
 cluster_num: 6
@@ -40,8 +40,8 @@ img_std: [0.229, 0.224, 0.225]
 img_size: 512
 
 ##### DataLoader ########################################
-train_bs: 64
-valid_bs: 64
+train_bs: 16
+valid_bs: 16
 num_workers: 2
 
 ##### MixUp #############################################
