--- a/exp/exp_0068/config/config.yaml
+++ b/exp/exp_0068/config/config.yaml
@@ -5,9 +5,9 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0]
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
-model_arch: tf_efficientnet_b2_ns
+model_arch: tf_efficientnet_b0
 device: cuda:0
 save: True
 
