--- a/exp/exp_0069/config/config.yaml
+++ b/exp/exp_0069/config/config.yaml
@@ -2,10 +2,10 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 10
+epoch: 2
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 model_arch: swin_base_patch4_window12_384_in22k
 device: cuda:0
