--- a/exp/exp_0069/config/config.yaml
+++ b/exp/exp_0069/config/config.yaml
@@ -2,11 +2,12 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 2
+epoch: 10
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
+features_num: 128
 model_arch: swin_base_patch4_window12_384_in22k
 device: cuda:0
 save: True
