--- a/exp/exp_0068/config/config.yaml
+++ b/exp/exp_0068/config/config.yaml
@@ -5,11 +5,13 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
-model_arch: tf_efficientnet_b0
+features_num: 128
+model_arch: swin_base_patch4_window12_384_in22k
 device: cuda:0
 save: True
+result_output: True
 
 ##### Group ############################################
 cluster_num: 6
@@ -19,7 +21,7 @@ loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 1e-4
+lr: 5e-6
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
@@ -37,7 +39,7 @@ final_div_factor: 1000. # OCLR
 ##### Image Info ########################################
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
-img_size: 512
+img_size: 384
 
 ##### DataLoader ########################################
 train_bs: 16
@@ -45,7 +47,7 @@ valid_bs: 16
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0.0
+mix_p: 0.
 init_nomix_epoch: 0
 last_nomix_epoch: 0
 
