--- a/exp/exp_0070/config/config.yaml
+++ b/exp/exp_0070/config/config.yaml
@@ -2,19 +2,16 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 10
+epoch: 1
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0]
+use_fold: [0, 1]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 features_num: 128
-model_arch: swin_base_patch4_window12_384_in22k
+model_arch: tf_efficientnet_b0
 device: cuda:0
 save: True
 result_output: True
-
-##### Group ############################################
-cluster_num: 6
 
 ######   Loss   ########################################
 loss: FOCALLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
