--- a/exp/exp_0048/config/config.yaml
+++ b/exp/exp_0048/config/config.yaml
@@ -45,7 +45,7 @@ valid_bs: 16
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0.0
+mix_p: 0.
 init_nomix_epoch: 0
 last_nomix_epoch: 0
 
