--- a/exp/exp_0076/config/config.yaml
+++ b/exp/exp_0076/config/config.yaml
@@ -8,7 +8,7 @@ fold_num: 10
 use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 features_num: 128
-model_arch: swin_base_patch4_window12_384_in22k
+model_arch: swin_base_patch4_window7_224_in22k
 device: cuda:0
 save: True
 result_output: True
@@ -36,7 +36,7 @@ final_div_factor: 1000. # OCLR
 ##### Image Info ########################################
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
-img_size: 384
+img_size: 224
 
 ##### DataLoader ########################################
 train_bs: 16
@@ -44,9 +44,9 @@ valid_bs: 16
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0.5
-init_nomix_epoch: 1
-last_nomix_epoch: 1
+mix_p: 0.
+init_nomix_epoch: 0
+last_nomix_epoch: 0
 
 ##### Data Augmentation #################################
 padding: None
@@ -98,10 +98,8 @@ train_aug:
     p: 0.25
   ToGray:
     p: 0.1
-  RandomGridShuffle:
-    p: 0.3
 
-
+    
 valid_aug:
   Resize:
     height: ${img_size}
