--- a/exp/exp_0076/config/config.yaml
+++ b/exp/exp_0076/config/config.yaml
@@ -8,17 +8,18 @@ fold_num: 10
 use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 features_num: 128
-model_arch: swin_base_patch4_window7_224_in22k
+model_arch: swin_base_patch4_window12_384_in22k
 device: cuda:0
-save: True
-result_output: True
+save: False
+result_output: False
 
 ######   Loss   ########################################
-loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss
+loss: RMSE # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+gamma: 0. # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 5e-6
+lr: 1e-6
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
@@ -36,7 +37,7 @@ final_div_factor: 1000. # OCLR
 ##### Image Info ########################################
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
-img_size: 224
+img_size: 384
 
 ##### DataLoader ########################################
 train_bs: 16
@@ -99,7 +100,7 @@ train_aug:
   ToGray:
     p: 0.1
 
-    
+
 valid_aug:
   Resize:
     height: ${img_size}
