--- a/exp/exp_0081/config/config.yaml
+++ b/exp/exp_0081/config/config.yaml
@@ -8,14 +8,14 @@ fold_num: 10
 use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 features_num: 128
-model_arch: swin_base_patch4_window12_384_in22k
+model_arch: swin_base_patch4_window12_224_in22k
 device: cuda:0
 save: False
 result_output: False
 
 ######   Loss   ########################################
-loss: FOCALLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
-gamma: 0. # FOCALLoss
+loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
@@ -37,7 +37,7 @@ final_div_factor: 1000. # OCLR
 ##### Image Info ########################################
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
-img_size: 384
+img_size: 224
 
 ##### DataLoader ########################################
 train_bs: 16
