--- a/exp/exp_0083/config/config.yaml
+++ b/exp/exp_0083/config/config.yaml
@@ -8,7 +8,7 @@ fold_num: 10
 use_fold: [0]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 features_num: 128
-model_arch: swin_base_patch4_window12_384_in22k
+model_arch: tf_efficientnet_b0
 device: cuda:0
 save: True
 result_output: True
