--- a/exp/exp_0083/config/config.yaml
+++ b/exp/exp_0083/config/config.yaml
@@ -2,13 +2,13 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 1
+epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0]
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
 features_num: 128
-model_arch: tf_efficientnet_b0
+model_arch: swin_base_patch4_window12_384_in22k
 device: cuda:0
 save: True
 result_output: True
