--- a/exp/exp_0086/config/config.yaml
+++ b/exp/exp_0086/config/config.yaml
@@ -12,7 +12,7 @@ save: False
 result_output: False
 
 ######   Features   ####################################
-train_csv: 'train'
+train_csv: 'train' # {train_csv}.csv
 dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
