--- a/exp/exp_0089/config/config.yaml
+++ b/exp/exp_0089/config/config.yaml
@@ -5,11 +5,11 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0]
-model_arch: swin_base_patch4_window7_224_in22k
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+model_arch: swin_base_patch4_window7_384_in22k
 device: cuda:0
-save: False
-result_output: False
+save: True
+result_output: True
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
@@ -22,7 +22,7 @@ gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 1e-5
+lr: 5e-6
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
@@ -40,7 +40,7 @@ final_div_factor: 1000. # OCLR
 ##### Image Info ########################################
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
-img_size: 224
+img_size: 384
 
 ##### DataLoader ########################################
 train_bs: 16
