--- a/exp/exp_0090/config/config.yaml
+++ b/exp/exp_0090/config/config.yaml
@@ -9,6 +9,7 @@ use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 backbone: swin_base_patch4_window7_224_in22k
 model_arch: tf_efficientnet_b2_ns
+backbone_path: exp_0084/swin_base_patch4_window7_224_in22k_fold_0.pth
 embedder_path: exp_0067/tf_efficientnet_b2_ns_fold_0.pth
 
 device: cuda:0
