--- a/exp/exp_0090/config/config.yaml
+++ b/exp/exp_0090/config/config.yaml
@@ -2,7 +2,7 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 15
+epoch: 100
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
@@ -14,8 +14,8 @@ backbone_path: exp_0084/swin_base_patch4_window7_224_in22k_fold_0.pth
 embedder_path: exp_0067/tf_efficientnet_b2_ns_fold_0.pth
 
 device: cuda:0
-save: True
-result_output: True
+save: False
+result_output: False
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
@@ -28,15 +28,15 @@ gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 1e-5
+lr: 1e-4
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
 
 ##### Scheduler ########################################
 scheduler: CosineAnnealingWarmRestarts # OneCycleLR
-T_0: ${epoch} # CAWR
-T_mult: 1 # CAWR
+T_0: 5 # CAWR
+T_mult: 2 # CAWR
 eta_min: 1e-9 # CAWR
 
 pct_start: 0.3 # OCLR
