--- a/exp/exp_0095/config/config.yaml
+++ b/exp/exp_0095/config/config.yaml
@@ -17,12 +17,12 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
 gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 1e-4
+lr: 5e-6
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
@@ -56,13 +56,13 @@ last_nomix_epoch: 0
 padding: None
 
 train_aug:
+  Resize:
+    height: ${img_size}
+    width: ${img_size}
   RandomResizedCrop:
     height: ${img_size}
     width: ${img_size}
     p: 1.0
-  # Resize:
-  #   height: ${img_size}
-  #   width: ${img_size}
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
