--- a/exp/exp_0096/config/config.yaml
+++ b/exp/exp_0096/config/config.yaml
@@ -2,10 +2,10 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 15
+epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_base_patch4_window7_224_in22k
 device: cuda:0
 save: True
@@ -13,16 +13,16 @@ result_output: True
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
-dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
+dense_columns: ['original']
 features_num: 128
 
 ######   Loss   ########################################
-loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
 gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 5e-6
+lr: 1e-5
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
