--- a/exp/exp_0097/config/config.yaml
+++ b/exp/exp_0097/config/config.yaml
@@ -2,20 +2,26 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 20
+epoch: 10
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 model_arch: hybrid_effnetb2ns_swinbase224
-backbone: swin_base_patch4_window7_224_in22k
-embedder: tf_efficientnet_b2_ns
-backbone_path: exp_0084/swin_base_patch4_window7_224_in22k_fold_0.pth
-embedder_path: exp_0067/tf_efficientnet_b2_ns_fold_0.pth
 
 device: cuda:0
 save: True
 result_output: True
+
+######   Hybrid   ######################################
+backbone: swin_base_patch4_window7_224_in22k
+embedder: tf_efficientnet_b2_ns
+backbone_path: exp_0084/swin_base_patch4_window7_224_in22k_fold_0.pth
+embedder_path: exp_0067/tf_efficientnet_b2_ns_fold_0.pth
+dino_exp: 2
+dino_img_num: 150000
+
+embedder_freeze: True
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
@@ -28,7 +34,7 @@ gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 1e-5
+lr: 5e-6
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
