--- a/exp/exp_0097/config/config.yaml
+++ b/exp/exp_0097/config/config.yaml
@@ -19,9 +19,9 @@ embedder: tf_efficientnet_b2_ns
 backbone_path: exp_0084/swin_base_patch4_window7_224_in22k_fold_0.pth
 embedder_path: exp_0067/tf_efficientnet_b2_ns_fold_0.pth
 dino_exp: 2
-dino_img_num: 150000
+dino_img_num: 240000
 
-embedder_freeze: True
+embedder_freeze: False
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
