--- a/exp/exp_0097/config/config.yaml
+++ b/exp/exp_0097/config/config.yaml
@@ -35,7 +35,7 @@ gamma: 0 # FOCALLoss
 ##### Optimizer ########################################
 optimizer: AdamW
 lr: 1e-5
-weight_decay: 1e-6
+weight_decay: 1e-2
 beta1: 0.5
 beta2: 0.999
 
@@ -55,8 +55,8 @@ img_std: [0.229, 0.224, 0.225]
 img_size: 448
 
 ##### DataLoader ########################################
-train_bs: 16
-valid_bs: 16
+train_bs: 32
+valid_bs: 32
 num_workers: 2
 
 ##### MixUp #############################################
@@ -80,18 +80,18 @@ train_aug:
     std: ${img_std}
     max_pixel_value: 255.0
     p: 1.0
-  # HorizontalFlip: 
-  #   p: 0.3
-  # VerticalFlip: 
-  #   p: 0.3
-  # Rotate:
-  #   limit: 180
-  #   p: 0.2
-  # ShiftScaleRotate:
-  #   shift_limit: 0.1
-  #   scale_limit: 0.1
-  #   rotate_limit: 45
-  #   p: 0.5
+  HorizontalFlip: 
+    p: 0.3
+  VerticalFlip: 
+    p: 0.3
+  Rotate:
+    limit: 180
+    p: 0.2
+  ShiftScaleRotate:
+    shift_limit: 0.1
+    scale_limit: 0.1
+    rotate_limit: 45
+    p: 0.5
   # HueSaturationValue:
   #   hue_shift_limit: 0.2
   #   sat_shift_limit: 0.2
