--- a/exp/exp_0098/config/config.yaml
+++ b/exp/exp_0098/config/config.yaml
@@ -17,11 +17,13 @@ result_output: True
 backbone: swin_base_patch4_window7_224_in22k
 embedder: tf_efficientnet_b2_ns
 backbone_path: exp_0084/swin_base_patch4_window7_224_in22k_fold_0.pth
-embedder_path: exp_0067/tf_efficientnet_b2_ns_fold_0.pth
+embedder_path: exp_0091/tf_efficientnet_b2_ns_fold_0.pth
 dino_exp: 2
-dino_img_num: 916000
+dino_img_num: 1200000
 
-embedder_freeze: True
+freeze_fc_epoch: 0
+freeze_embedder_epoch: 20
+freeze_backbone_epoch: 20
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
