--- a/exp/exp_0101/config/config.yaml
+++ b/exp/exp_0101/config/config.yaml
@@ -17,7 +17,7 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+loss: MSPELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss, MSPELoss
 gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
