--- a/exp/exp_0101/config/config.yaml
+++ b/exp/exp_0101/config/config.yaml
@@ -17,7 +17,7 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: MSPELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss, MSPELoss
+loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss, MSPELoss
 gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
@@ -28,12 +28,12 @@ beta1: 0.5
 beta2: 0.999
 
 ##### Scheduler ########################################
-scheduler: CosineAnnealingWarmRestarts # OneCycleLR
+scheduler: OneCycleLR # OneCycleLR
 T_0: ${epoch} # CAWR
 T_mult: 1 # CAWR
 eta_min: 1e-9 # CAWR
 
-pct_start: 0.3 # OCLR
+pct_start: 0.2 # OCLR
 div_factor: 25. # OCLR
 final_div_factor: 1000. # OCLR
 
@@ -43,14 +43,14 @@ img_std: [0.229, 0.224, 0.225]
 img_size: 224
 
 ##### DataLoader ########################################
-train_bs: 16
-valid_bs: 16
+train_bs: 32
+valid_bs: 32
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0.
-init_nomix_epoch: 0
-last_nomix_epoch: 0
+mix_p: 0.5
+init_nomix_epoch: 1
+last_nomix_epoch: 1
 
 ##### Data Augmentation #################################
 padding: None
@@ -80,28 +80,28 @@ train_aug:
     scale_limit: 0.1
     rotate_limit: 45
     p: 0.5
-  HueSaturationValue:
-    hue_shift_limit: 0.2
-    sat_shift_limit: 0.2
-    val_shift_limit: 0.2
-    p: 0.1
-  RandomBrightnessContrast:
-    brightness_limit: 0.1
-    contrast_limit: 0.1
-    p: 0.1
-  Cutout:
-    num_holes: 10
-    max_h_size: 50
-    max_w_size: 50
-    p: 0.2
-  Blur:
-    blur_limit: 15
-    p: 0.1
-  MotionBlur:
-    blur_limit: 15
-    p: 0.1
-  ToGray:
-    p: 0.1
+  # HueSaturationValue:
+  #   hue_shift_limit: 0.2
+  #   sat_shift_limit: 0.2
+  #   val_shift_limit: 0.2
+  #   p: 0.1
+  # RandomBrightnessContrast:
+  #   brightness_limit: 0.1
+  #   contrast_limit: 0.1
+  #   p: 0.1
+  # Cutout:
+  #   num_holes: 10
+  #   max_h_size: 50
+  #   max_w_size: 50
+  #   p: 0.2
+  # Blur:
+  #   blur_limit: 15
+  #   p: 0.1
+  # MotionBlur:
+  #   blur_limit: 15
+  #   p: 0.1
+  # ToGray:
+  #   p: 0.1
 
 valid_aug:
   Resize:
