--- a/exp/exp_0118/config/config.yaml
+++ b/exp/exp_0118/config/config.yaml
@@ -8,8 +8,8 @@ fold_num: 10
 use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_base_patch4_window7_224_in22k
 device: cuda:0
-save: True
-result_output: True
+save: False
+result_output: False
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
