--- a/exp/exp_0128/config/config.yaml
+++ b/exp/exp_0128/config/config.yaml
@@ -10,6 +10,7 @@ model_arch: swin_large_patch4_window7_224
 device: cuda:0
 save: False
 result_output: False
+reg_gamma: 10
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
