--- a/exp/exp_0162/config/config.yaml
+++ b/exp/exp_0162/config/config.yaml
@@ -8,10 +8,10 @@ fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_large_patch4_window7_224
 device: cuda:0
-cls: [100]
-cls_weights: [1]
-sigma: 10
-lambda_: 1
+# cls: [100]
+# cls_weights: [1]
+# sigma: 10
+# lambda_: 1
 save: True
 save_step: 32
 result_output: True
@@ -64,7 +64,20 @@ train_aug:
   RandomResizedCrop:
     height: ${img_size}
     width: ${img_size}
+    scale: [0.75, 1.0]
     p: 1.0
+  HorizontalFlip:
+    p: 0.5
+  ShiftScaleRotate:
+    shift_limit: 0.1
+    scale_limit: 0.1
+    rotate_limit: 10
+    p: 0.5
+  Cutout:
+    num_holes: 10
+    max_h_size: 30
+    max_w_size: 30
+    p: 0.5
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
