--- a/exp/exp_0163/config/config.yaml
+++ b/exp/exp_0163/config/config.yaml
@@ -13,7 +13,7 @@ device: cuda:0
 # sigma: 10
 # lambda_: 1
 save: True
-save_step: 300
+save_step: 75
 result_output: True
 
 ######   Features   ####################################
@@ -27,13 +27,13 @@ gamma: 0.1 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 2e-5
+lr: 1e-5
 weight_decay: 1e-2
 beta1: 0.5
 beta2: 0.999
 
 ##### Scheduler ########################################
-scheduler: OneCycleLR # OneCycleLR
+scheduler: CosineAnnealingWarmRestarts # OneCycleLR
 T_0: ${epoch} # CAWR
 T_mult: 1 # CAWR
 eta_min: 1e-9 # CAWR
@@ -64,15 +64,7 @@ train_aug:
   RandomResizedCrop:
     height: ${img_size}
     width: ${img_size}
-    scale: [0.75, 1.0]
     p: 1.0
-  HorizontalFlip:
-    p: 0.5
-  ShiftScaleRotate:
-    shift_limit: 0.1
-    scale_limit: 0.1
-    rotate_limit: 10
-    p: 0.5
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
